style: alignment fix

--- a/src/components/features/reviews/Reviews.css
+++ b/src/components/features/reviews/Reviews.css
@@ -75,8 +75,17 @@
 .review-content-container {
   display: flex;
   align-items: center;
-  gap: 0.5rem;
   width: 100%;
+  justify-content: space-between;
+  padding-right: 4rem;
+}
+
+.user-details {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 1rem;
+  align-self: flex-start;
 }
 
 .review-content-container img {
@@ -94,7 +103,7 @@
 }
 
 .rating span {
-  font-size: 0.9rem;
+  font-size: 0.8rem;
 }
 
 .add-review {
